--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:200|Shrikhand|Unica+One" rel="stylesheet" type='text/css'>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+
 
     <link rel="stylesheet" href="fog.css">
     <link href="index.css" rel="stylesheet"/>
@@ -38,6 +41,15 @@
           </div>
           <h1 id="greeting">Hello, my name is</h1>
           <h1 id="home">Christine Chen</h1>
+        </div>
+
+
+        <div class="mypic">
+          <img src="assets/mysmallhead.png" />
+        </div>
+
+        <div class="about text-primary">
+          I'm a sophomore studying electrical engineering at UCLA. My passions include drawing, coding, and ultimate frisbee. Growing up in the bay area, I was immersed in STEM and began tinkering from a young age. From building a clock in middle school to coding an app in college, the ability to create is something I hold dear in my heart.
         </div>
      
 
