resume and project descriptions

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         </div>
 
 
-        <div class="mypic">
+
+
+
+        <div class="mypic" >
+          
           <img src="assets/mysmallhead.png" />
         </div>
 
@@ -52,12 +56,11 @@
           I'm a sophomore studying electrical engineering at UCLA. My passions include drawing, coding, and ultimate frisbee. Growing up in the bay area, I was immersed in STEM and began tinkering from a young age. From building a clock in middle school to coding an app in college, the ability to create is something I hold dear in my heart.
         </div>
      
-
-
-
-
+        <div id="project-title">Projects</div>
      <div id="gridfolio"></div>
      <script src="index.js" type="text/javascript"></script>
+
+
 
     </div>
 
