--- a/index.html
+++ b/index.html
@@ -51,14 +51,28 @@
     </div>
 
 
-    <div class = 'row'>
+    <div class = 'row glyphs project'>
+
+
+      <div class = 'col-sm-2 col-sm-offset-2'>
+        <div class='number'>2</div> <div class='subHead'>skateboards</div><div class='subHeadText'> longboard & penny </div>
+      </div>
 
       <div class = 'col-sm-2 col-sm-offset-1'>
+        <div class='number'>19</div> <div class='subHead'>years old</div><div class='subHeadText'> bay area native </div>
       </div>
 
-      <div class = 'col-sm-2 col -sm-offset 1'>
+      
 
+      
+
+      <div class = 'col-sm-2 col-sm-offset-1'>
+        <div class='number'>4</div>  <div class='subHead'>frisbees</div> <div class='subHeadText'> standard 175 grams </div> 
       </div>
+
+
+
+
 
     </div>
 
@@ -86,7 +100,9 @@
     </div> -->
 
 
-
+    <div class='row text-primary'>
+      <h1 class='aboutMeTitle'> ~ Projects ~ </h1>
+    </div>
 
     <div class = 'project container-fluid'>
 
@@ -108,8 +124,8 @@
           <div class='row cair'>
             <div class='overlay'>
               <h1 class='projectTitleText'>CAir</h1>
-              <div class='date'>June - Aug 2016</div>
-              <div class='projectText'>
+              <div class='date1'>June - Aug 2016</div>
+              <div class='projectText1'>
                 An iOS smart phone app that remotely controls an air sampling device powered by a Raspberry Pi. The app can display previous samples as well as have different functions such as calibration and sampling. Required knowledge of Swift and Python</div>
             </div>
           </div>
