--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
     <div class='row text-primary'>
-      <h1 class='aboutMeTitle'> ~ Projects ~ </h1>
+      <h1 class='aboutMeTitle'> ~ Projects ~ </h1> <br>
     </div>
 
     <div class = 'project container-fluid'>
