--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+   	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:200,400|Shrikhand|Unica+One" rel="stylesheet" type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Dosis:200" rel="stylesheet">
     <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -40,9 +46,29 @@
   <meta name="msapplication-TileImage" content="assets/favicon/favicon-144.png">
   <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
 
+  	<style type="text/css">
+
+	h1 {
+		color: #ffffff;
+	}
+
+	</style>
+
+
+
   </head>
 
   <body>
+
+  		<div id="loader-wrapper">
+			<div id="loader"></div>
+
+			<div class="loader-section section-left"></div>
+            <div class="loader-section section-right"></div>
+
+		</div>
+
+
 
     <div class="row project container-fluid titleArea">
 
@@ -66,7 +92,7 @@
     </div>
 
     <div class='row aboutMe'>
-      <div class='col-sm-4 col-sm-offset-3 text'> I'm a sophomore studying electrical engineering at UCLA. My passions include drawing, coding, and ultimate frisbee. Growing up in the bay area, I was immersed in STEM and began tinkering from a young age. From building a clock in middle school to coding an app in college, the ability to create is something I hold dear in my heart. </div>
+      <div class='col-sm-4 col-sm-offset-3 text'> I'm a junior studying electrical engineering at UCLA. My passions include drawing, coding, and ultimate frisbee. Growing up in the bay area, I was immersed in STEM and began tinkering from a young age. From building a clock in middle school to coding an app in college, the ability to create is something I hold dear in my heart. </div>
 
       <div class='myHead col-sm-4'>
       <img src="assets/headcircle.png">
@@ -82,7 +108,7 @@
       </div>
 
       <div class = 'col-sm-2 col-sm-offset-1'>
-        <div class='number'>19</div> <div class='subHead'>years old</div><div class='subHeadText'> bay area native </div>
+        <div class='number'>20</div> <div class='subHead'>years old</div><div class='subHeadText'> bay area native </div>
       </div>
 
       
@@ -242,10 +268,12 @@
 
       </div>
 
-    </div>
 
+</div>
 
-
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+	<script src="js/main.js"></script>
 
 
 
